test/expected/declare_ii.out
declare x as inline int
        ^
9: error: inline variables not supported in C
